12/6/11 #3170, change ConductivityTesterNode so that separate sim-sharing args can be provided to positive and negative probes
12/5/11 #3170, #3175 add sim-sharing to conductivity tester by converting probe drag handlers to subclass of SimSharingDragSequenceHandler
12/5/11 #3175 switch to subclassing for sim-sharing drag handlers
12/5/11 #3175, add "object" parameter to sim-sharing drag handlers
12/5/11 Added a speedometer
12/5/11 Added a getter to make it possible to override backgrounds
12/2/11 #3136, move piccolo-phet string literals to sim-sharing object/action/parameter classes
12/1/11 Require PieChartNode entries to be non-negative
11/30/11 workaround for JVM crash on Mac, caused when slices of PieChartNode sum to zero
11/30/11 #3169, provide support for common forms of alignment in Box nodes
11/16/2011 Factored out non-interactive parent class of InjectorNode to facilitate reusability
11/16/2011 Removed unused parameter from InjectorNode constructor
11/2/2011 Fixed ComboBoxNode constructor cascading, see #3146
11/1/2011 fix for #3141, only dismiss ComboBoxNode popup if it was actually visible
11/1/2011 Changed from SimSharingProperty to track UI control changes, see #3136
10/16/2011 Extracted SensorNode superclass from VelocitySensorNode for reuse in plate-tectonics
10/13/2011 Changed color in thermometer node to be the color-blind-friendly version of red.
10/10/2011 Renamed "allowed" parameter to "enabled" in faucet classes
10/6/2011 Added an invisible rectangle around the positions where the knob could be to improve layouts based on full bounds of the slider
9/16/2011 Gray out the kit button nodes instead of making them invisible
9/16/2011 Added a constructor to KitSelectionNode that allows specification of the forward/back button colors
9/16/2011 Added ColorScheme to arrow button node
9/16/2011 ArrowButtonNode minor formatting changes