@@ -6,10 +6,14 @@ package edu.colorado.phet.moleculeshapes;
 import java.awt.Frame;
 
 import javax.swing.JMenu;
+import javax.swing.JSeparator;
 
 import edu.colorado.phet.common.phetcommon.application.PhetApplicationConfig;
 import edu.colorado.phet.common.phetcommon.application.PhetApplicationLauncher;
+import edu.colorado.phet.common.phetcommon.model.property.Property;
+import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.phetcommon.view.PhetFrame;
+import edu.colorado.phet.common.phetcommon.view.controls.PropertyCheckBoxMenuItem;
 import edu.colorado.phet.common.phetcommon.view.menu.OptionsMenu;
 import edu.colorado.phet.jmephet.JMEPhetApplication;
 import edu.colorado.phet.jmephet.JMEUtils;
@@ -26,6 +30,10 @@ public class MoleculeShapesApplication extends JMEPhetApplication {
 
     private MoleculeShapesTab tab1;
     private RealMoleculesTab tab2;
+    private RealMoleculesTab tab3;
+
+    public static final Property<Boolean> tab2Visible = new Property<Boolean>( true );
+    public static final Property<Boolean> tab3Visible = new Property<Boolean>( true );
 
     /**
      * Sole constructor.
@@ -52,8 +60,29 @@ public class MoleculeShapesApplication extends JMEPhetApplication {
         addModule( new MoleculeShapesModule( parentFrame ) {{
             addTab( tab1 = new MoleculeShapesTab( Strings.MOLECULE__SHAPES__TITLE, false ) );
             addTab( tab2 = new RealMoleculesTab( Strings.REAL__MOLECULES, false, false ) );
-            addTab( new RealMoleculesTab( Strings.REAL__MOLECULES, true, false ) );
-//        addModule( new DebugModule( parentFrame, "Debug" ) );
+            addTab( tab3 = new RealMoleculesTab( Strings.REAL__MOLECULES, true, false ) );
+
+            tab2Visible.addObserver( new SimpleObserver() {
+                                         public void update() {
+                                             if ( tab2Visible.get() ) {
+                                                 addTab( tab2 );
+                                             }
+                                             else {
+                                                 removeTab( tab2 );
+                                             }
+                                         }
+                                     }, false );
+
+            tab3Visible.addObserver( new SimpleObserver() {
+                                         public void update() {
+                                             if ( tab3Visible.get() ) {
+                                                 addTab( tab3 );
+                                             }
+                                             else {
+                                                 removeTab( tab3 );
+                                             }
+                                         }
+                                     }, false );
         }} );
     }
 
@@ -81,6 +110,10 @@ public class MoleculeShapesApplication extends JMEPhetApplication {
         // add items to the Developer menu here...
 
         DeveloperOptions.addDeveloperOptions( developerMenu, frame, tab1 );
+
+        developerMenu.add( new JSeparator() );
+        developerMenu.add( new PropertyCheckBoxMenuItem( "Show drop-down 2nd tab", tab2Visible ) );
+        developerMenu.add( new PropertyCheckBoxMenuItem( "Show kit 2nd tab", tab3Visible ) );
     }
 
     //----------------------------------------------------------------------------
