@@ -1,3 +1,4 @@
+Added developer options to show/hide 2nd tab versions.
 Fixed radio button multiple-clicking bug
 Text change to "Show Outer Lone Pairs"
 # 1.01.15 (59263) Dec 12, 2011
